{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 189,
  "lineage": "ee21a0e3-710f-619d-f074-26257f6d13b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:273354652032:instance/i-0ce192b0452016b6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce192b0452016b6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Wordpress-Key-Pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-045889e7b6eb9b489",
            "private_dns": "ip-10-0-1-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-34-227-242-213.compute-1.amazonaws.com",
            "public_ip": "34.227.242.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0059363b962364286",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063d9e397dc6a17d4",
            "tags": {
              "Name": "wordpress-instance"
            },
            "tags_all": {
              "Name": "wordpress-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d15f4af403f72aa8"
            ]
          },
          "dependencies": [
            "aws_db_instance.wordpress_db",
            "aws_db_subnet_group.wordpress_db_subnet_group",
            "aws_security_group.wordpress_db_sg",
            "aws_security_group.wordpress_sg",
            "aws_subnet.wordpress_subnet",
            "aws_subnet.wordpress_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:internet-gateway/igw-0ec6f53f61d0a2c1a",
            "id": "igw-0ec6f53f61d0a2c1a",
            "owner_id": "273354652032",
            "tags": {
              "Name": "wordpress-igw"
            },
            "tags_all": {
              "Name": "wordpress-igw"
            },
            "vpc_id": "vpc-09cd81c5d8ac2fe5c"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:route-table/rtb-09b5bfe1f4f9bac9c",
            "id": "rtb-09b5bfe1f4f9bac9c",
            "owner_id": "273354652032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec6f53f61d0a2c1a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-rt"
            },
            "tags_all": {
              "Name": "wordpress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cd81c5d8ac2fe5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0456a0cdb98a2c909",
            "route_table_id": "rtb-09b5bfe1f4f9bac9c",
            "subnet_id": "subnet-063d9e397dc6a17d4"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wordpress_rt",
            "aws_subnet.wordpress_subnet",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085e1a9475724816d",
            "route_table_id": "rtb-09b5bfe1f4f9bac9c",
            "subnet_id": "subnet-0231e2ef626d859bd"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wordpress_rt",
            "aws_subnet.wordpress_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:security-group/sg-08990d4e30cbbfb57",
            "description": "Security group for WordPress database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08990d4e30cbbfb57",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d15f4af403f72aa8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-db-sg",
            "name_prefix": "",
            "owner_id": "273354652032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-db-sg"
            },
            "tags_all": {
              "Name": "wordpress-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cd81c5d8ac2fe5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_sg",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:security-group/sg-0d15f4af403f72aa8",
            "description": "Security group for WordPress web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d15f4af403f72aa8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-sg",
            "name_prefix": "",
            "owner_id": "273354652032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-web-sg"
            },
            "tags_all": {
              "Name": "wordpress-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cd81c5d8ac2fe5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:subnet/subnet-063d9e397dc6a17d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d9e397dc6a17d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273354652032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-subnet"
            },
            "tags_all": {
              "Name": "wordpress-subnet"
            },
            "vpc_id": "vpc-09cd81c5d8ac2fe5c"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:subnet/subnet-0231e2ef626d859bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0231e2ef626d859bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273354652032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress-subnet-2"
            },
            "vpc_id": "vpc-09cd81c5d8ac2fe5c"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273354652032:vpc/vpc-09cd81c5d8ac2fe5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07816bab6dd6f4144",
            "default_route_table_id": "rtb-06b29256abac7fe24",
            "default_security_group_id": "sg-03a41cd64af41e2ff",
            "dhcp_options_id": "dopt-0cf09589c2322facb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cd81c5d8ac2fe5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b29256abac7fe24",
            "owner_id": "273354652032",
            "tags": {
              "Name": "wordpress-vpc"
            },
            "tags_all": {
              "Name": "wordpress-vpc"
            }
          }
        }
      ]
    }
  ]
}